--- a/src/app/videos/video-detail/video-detail.component.html
+++ b/src/app/videos/video-detail/video-detail.component.html
@@ -1,3 +1,6 @@
-<p>
-  video-detail works!
-</p>
+<br>
+<div class="container">
+  <div class="row">
+    <button type="button" class="btn btn-outline-primary" routerLink='/videos' routerLinkActive='active'>Back</button>
+  </div>
+</div>
